JNI and Unsafe warnings for JDK 24+